<resources>
    <string name="app_name">炫酷霓虹灯</string>
    <string name="app_versionName">炫酷霓虹灯 V2.0</string>
    <string name="led_mode">led mode</string>
    <string name="flash_mode">hand-writing mode</string>
    <string name="music_mode">music mode</string>
    <string name="glow_stick_mode">Glow Stick</string>
    <string name="save_settings">save settings</string>
    <string name="full_screen">full screen</string>
    <string name="str_led_setting_input_title">Please input the text you wanted:</string>
    <string name="str_led_setting_speed_title">Please choose the speed you wanted:</string>
    <string name="edit_text_hint">please input text to set settings</string>
    <string name="scroll_direction">scroll direction:</string>
    <string name="scroll_direction_left">right</string>
    <string name="scroll_direction_right">left</string>
    <string name="led_string_background">Background Color</string>
    <string name="led_string_color">Text Color </string>
    <string name="scroll_speed">Scroll Speed</string>
    <string name="scroll_text">Scroll Text</string>
    <string name="scroll_hint">LED Marquee</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="rainbow">rainbow Mode</string>
    <string name="input_text">input text</string>
    <string name="text_color_not_allow">you have open rainbow color mode, can not set text color</string>
    <string name="bg_color_not_allow">you have open LED color mode, can not set backGround color</string>
    <string name="hand_writing_background">Background</string>
    <string name="hand_writing_paint_size">Size</string>
    <string name="hand_writing_paint_color">Color</string>
    <string name="hand_writing_flash">Flash</string>
    <string name="hand_writing_preview">Preview</string>
    <string name="str_hw_background_color">Background Color</string>
    <string name="str_hw_paint_color">Paint Color</string>
    <string name="str_hw_paint_size">Paint Size</string>
    <string name="str_hw_on">On</string>
    <string name="str_hw_off">Off</string>
    <string name="str_stick_background_color">Background Color</string>
    <string name="str_stick_text_color">Text Color</string>
    <string name="str_stick_flash_switch">Flash</string>
    <string name="str_stick_flash_color">Flash Color</string>
    <string name="str_stick_flash_speed">Flash Speed</string>
    <string name="str_stick_color_pick_dialog_title">Colour Combination</string>
    <string name="str_stick_color_pick_dialog_ok">Select Color</string>
    <string name="str_stick_color_pick_dialog_cancel">Cancel</string>
    <string name="str_function_not_support">Not support this function yet, Coming soon.</string>
</resources>
