<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/led_setting_bg_color"
    android:orientation="vertical"
    tools:context="com.lyf.app.sled.activity.LedSettingsActivity">

    <com.lyf.app.sled.widget.MarqueeSurfaceView
        android:id="@+id/marquee_surface"
        android:layout_width="match_parent"
        android:layout_height="85dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/style_gs_setting_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/full_screen" />

        <ImageView
            android:id="@+id/full_screen"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="7.5dp"
            android:layout_marginEnd="7.5dp"
            android:layout_marginTop="12.5dp"
            android:layout_marginBottom="12.5dp"
            android:background="@drawable/ic_fullscreen"
            android:gravity="center_horizontal"
            android:onClick="jumpToFullScreen" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/style_gs_setting_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/led_string_color" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_shadow">

            <View
                android:id="@+id/string_background"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:onClick="showTextDialog"
                android:background="@color/black" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/style_gs_setting_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/led_string_background" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_shadow">

            <View
                android:id="@+id/led_background"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:onClick="showDialog"
                android:background="@color/black" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pref_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" />
</LinearLayout>